--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
 theme: jekyll-theme-cayman
+title: SGuard
+description: A Feature-based Clustering Tool for Effective Spreadsheet Defect Detection
+
+show_downloads: true
+github:
+  zip_url: https://github.com/sheetguard/sguard/archive/v1.0.zip
+  tar.gz_url: https://github.com/sheetguard/sguard/archive/v1.0.tar.gz
